--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
   text-align: center;
   background: linear-gradient(to bottom, #6ab7f5, #fff);
   min-height: 100vh;
+  background-color: black;
 }
 
 main{
@@ -18,6 +19,7 @@ main{
   margin-top: 2%;
   padding: 15px;
   position: relative;
+  
 }
  
 .pokedex{
